# IRIS-digi-invoice

./: PRD.md
backend/: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  IRIS Documentation.md  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 10e4fac5e5d4_initial_schema.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  invoice.py  invoice_item.py  submission_attempt.py  tenant.py  user.py
backend/app/routers/: __init__.py  auth.py  health.py  invoices.py
backend/app/schemas/: __init__.py  auth.py  common.py  invoice.py
backend/app/services/: auth_service.py  fbr_service.py  invoice_service.py  mock_fbr_service.py
backend/app/utils/: invoice_ref.py  security.py
backend/scripts/: fetch_reference_data.py  seed_user.py  send_sandbox_scenarios.py
backend/tests/: conftest.py  test_fbr_mock.py  test_fbr_scenarios.py  test_health.py  test_invoice_crud.py  test_mock_fbr.py
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/components/forms/: buyer-info-section.tsx  form-field.tsx  index.ts  invoice-header-section.tsx  items-grid.tsx
frontend/src/components/layout/: app-header.tsx  app-shell.tsx  app-sidebar.tsx
frontend/src/components/providers/: index.ts  msw-provider.tsx  query-provider.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  index.ts  input.tsx  label.tsx  sonner.tsx
frontend/src/features/invoicing/: schemas.ts  utils.ts
frontend/src/lib/: env.ts  utils.ts
frontend/src/lib/__tests__/: env.test.ts
frontend/src/mocks/: handlers.ts  index.ts
frontend/src/test/: setup.ts
frontend/src/types/: api.ts  invoice.ts
(+16 files in other folders)
